--- a/portfolio/Cargo/app/scss/_fonts.scss
+++ b/portfolio/Cargo/app/scss/_fonts.scss
@@ -3,3 +3,5 @@
 @include font-face("AssistantBold", "../fonts/Assistant/AssistantBold");
 @include font-face("RobotoLight", "../fonts/Roboto/RobotoLight/RobotoLight");
 @include font-face("SegoeUILight", "../fonts/SegoeUI/SegoeUILight/SegoeUILight");
+@include font-face("SegoeUIRegular", "../fonts/SegoeUI/SegoeUIRegular/SegoeUIRegular");
+@include font-face("NexaRegular", "../fonts/Nexa/NexaRegular");
