--- a/portfolio/Moda/app/scss/_media.scss
+++ b/portfolio/Moda/app/scss/_media.scss
@@ -6,15 +6,28 @@
 
 
 
+
 /*==========  Desktop First  ==========*/
+
 @media screen and (max-height: 460px) {
-	 #home .mobile_nav .nav_m a {
-	 	padding: 5px 0;
-	 	padding-left: 34px;
-	 }
-	 #home .mobile_nav .nav_m {
-	 	padding-top: 20px;
-	 }
+    #home .mobile_nav .nav_m a {
+        padding: 5px 0;
+        padding-left: 34px;
+    }
+    #home .mobile_nav .nav_m {
+        padding-top: 20px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    #home .bg_video #video_background {
+        object-fit: cover !important;
+        height: 140% !important;
+        top: -20% !important;
+    }
+    #home .content {
+        height: 720px;
+    }
 }
 
 
@@ -56,15 +69,31 @@
     #contacts .contacts {
         width: 40%;
     }
-     #contacts .map {
-     	width: 55%;
-     }
-     #contacts .contacts h6 {
-      font: 3em "MuseoSansCyrl500";
-      padding-top: 35px;
+    #contacts .map {
+        width: 55%;
+    }
+    #contacts .contacts h6 {
+        font: 3em "MuseoSansCyrl500";
+        padding-top: 35px;
     }
     #contacts .contacts .numbers {
-      font: 1.6em "MuseoSansCyrl500";
+        font: 1.6em "MuseoSansCyrl500";
+    }
+    #home .bg_video #video_background {
+        object-fit: cover !important;
+        height: 140% !important;
+        top: -20% !important;
+    }
+    #home .content {
+        height: 500px !important;
+        min-height: 500px;
+    }
+    #home h1 {
+        font: 8em "Aempirial";
+    }
+    #home p {
+        font-size: 3.5em;
+        padding-top: 5px;
     }
 }
 
@@ -93,10 +122,22 @@
         padding-top: 40px;
     }
     #contacts .contacts .numbers {
-      flex-direction: column;
+        flex-direction: column;
     }
     #contacts .contacts h6 {
-      padding-top: 25px;
+        padding-top: 25px;
+    }
+    #home .bg_video {
+        display: none;
+    }
+    #home h1 {
+        color: #cdcdcd;
+    }
+    #home p {
+        color: #cdcdcd;
+    }
+    #home .a_bottom a {
+        background: url(../img/icon_back.png);
     }
 }
 
@@ -164,35 +205,35 @@
         width: 215px;
         height: 50px;
     }
-     #contacts .content {
-     	flex-direction: column;
-     }
-     #contacts .map {
-     	width: 100%;
-     	height: 195px;
-     }
-     #contacts .contacts {
-     	width: 100%;
-     	padding-top: 190px;
-     }
-     #contacts .map .bg {
-     	left: -250px;
-     	top: 180px;
-     }
-     #nav .nav li {
-     	padding-right: 20px;
-     }
-     #contacts .contacts .socials {
-     	padding-top: 20px;
-     }
-     #contacts .contacts .adress {
-     	padding-top: 20px;
-     }
-     #footer .copy {
-  padding-top: 25px;
-  padding-bottom: 0px; 
-  line-height: 200%;
-  }
+    #contacts .content {
+        flex-direction: column;
+    }
+    #contacts .map {
+        width: 100%;
+        height: 195px;
+    }
+    #contacts .contacts {
+        width: 100%;
+        padding-top: 190px;
+    }
+    #contacts .map .bg {
+        left: -250px;
+        top: 180px;
+    }
+    #nav .nav li {
+        padding-right: 20px;
+    }
+    #contacts .contacts .socials {
+        padding-top: 20px;
+    }
+    #contacts .contacts .adress {
+        padding-top: 20px;
+    }
+    #footer .copy {
+        padding-top: 25px;
+        padding-bottom: 0px;
+        line-height: 200%;
+    }
 }
 
 // <576px
@@ -233,11 +274,11 @@
         padding-bottom: 170px;
     }
     #nav .nav {
-    	flex-direction: column;
-    	align-items: center;
+        flex-direction: column;
+        align-items: center;
     }
     #nav .nav li {
-    	padding: 0px;
-    	padding-bottom: 14px;
+        padding: 0px;
+        padding-bottom: 14px;
     }
 }
