--- a/portfolio/Moda/app/scss/common.scss
+++ b/portfolio/Moda/app/scss/common.scss
@@ -37,27 +37,27 @@ h3 {
 
 
 #home {
-    background: #25394e url(../img/bg_home.jpg) no-repeat center center;
+    //background: #25394e url(../img/bg_home.jpg) no-repeat center center;
+    background: #fff;
     background-size: cover;
     position: relative;
     z-index: 2;
     max-height: 800px;
     margin: 0 auto;
     // bacground
-    .bg_video {
-        position: absolute;
-        overflow: hidden;
+    .element-with-video-bg {
+        position: absolute !important;
         top: 0px;
         width: 100%;
         height: 100%;
         z-index: 1;
         background: #fff;
-        #video_background {
-            width: 100% !important;
-            height: 100% !important;
-            top: 0 !important;
-            left: 0 !important;
-            object-fit: none !important;
+                    opacity: 0;
+            transition: 3s;
+        .my-background-video {
+            width: 100%;
+            height: 100%;
+            object-fit: none;
         }
         //
     }
@@ -65,11 +65,11 @@ h3 {
         position: relative;
         z-index: 2;
         height: 100vh;
-        min-height: 670px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         max-height: 800px;
+        min-height: 600px;
     }
     header {
         position: absolute;
