--- a/portfolio/Cargo/app/css/libs.css
+++ b/portfolio/Cargo/app/css/libs.css
@@ -5,6 +5,8 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  * Forked from Normalize.css, licensed MIT (https://github.com/necolas/normalize.css/blob/master/LICENSE.md)
  */
+@import url(../libs/OwlCarousel2-2.3.4/owl.theme.default.css);
+@import url(../libs/OwlCarousel2-2.3.4/owl.carousel.css);
 *,
 *::before,
 *::after {
