--- a/portfolio/Cargo/app/scss/_fonts.scss
+++ b/portfolio/Cargo/app/scss/_fonts.scss
@@ -1,7 +1,9 @@
 @import "_mixins/font-face";
 
-@include font-face("AssistantBold", "../fonts/Assistant/AssistantBold");
 @include font-face("RobotoLight", "../fonts/Roboto/RobotoLight/RobotoLight");
+@include font-face("RobotoRegular", "../fonts/Roboto/RobotoRegular/RobotoRegular");
 @include font-face("SegoeUILight", "../fonts/SegoeUI/SegoeUILight/SegoeUILight");
+@include font-face("SegoeUISemiBold", "../fonts/SegoeUI/SegoeUISemiBold/SegoeUISemiBold");
 @include font-face("SegoeUIRegular", "../fonts/SegoeUI/SegoeUIRegular/SegoeUIRegular");
+@include font-face("SegoeUIBold", "../fonts/SegoeUI/SegoeUISemiBold/SegoeUISemiBold");
 @include font-face("NexaRegular", "../fonts/Nexa/NexaRegular");
