--- a/portfolio/Cargo/app/scss/libs.scss
+++ b/portfolio/Cargo/app/scss/libs.scss
@@ -1,3 +1,5 @@
 @import "vars";
 @import "../libs/bootstrap/scss/bootstrap-reboot.scss";
 @import "../libs/bootstrap/scss/bootstrap-grid.scss";
+@import "../libs/OwlCarousel2-2.3.4/owl.theme.default.css";
+@import "../libs/OwlCarousel2-2.3.4/owl.carousel.css";
