--- a/portfolio/Cargo/app/scss/main.scss
+++ b/portfolio/Cargo/app/scss/main.scss
@@ -378,6 +378,7 @@ header {
         }
         .slide {
             padding: 0 15px;
+            width: 100%;
         }
         .slide1 {
             min-height: 846px;
