--- a/portfolio/Cargo/app/css/main.css
+++ b/portfolio/Cargo/app/css/main.css
@@ -485,7 +485,8 @@ header {
     -o-transition: .3s ease;
     transition: .3s ease; }
   #services .slider .slide {
-    padding: 0 15px; }
+    padding: 0 15px;
+    width: 100%; }
   #services .slider .slide1 {
     min-height: 846px;
     display: -webkit-box;
@@ -1521,7 +1522,7 @@ header {
   #reviews .arrow_right, #reviews .arrow_left {
     display: none; }
   #reviews .owl2, #reviews .owl3 {
-    width: auto; }
+    width: 100%; }
   #reviews .slide .name {
     font-size: 2.3em; }
   #home .container .home_bottom .socials {
