--- a/portfolio/Cargo/app/scss/_media.scss
+++ b/portfolio/Cargo/app/scss/_media.scss
@@ -284,7 +284,7 @@
    	display: none;
    }
    #reviews .owl2, #reviews .owl3 {
-   	width: auto;
+   	width: 100%;
    }
    #reviews .slide .name {
    	font-size: 2.3em;
