--- a/portfolio/Cargo/app/scss/_media.scss
+++ b/portfolio/Cargo/app/scss/_media.scss
@@ -1,4 +1,33 @@
-
+@media screen and (max-width: 1400px) {
+#services .slider .slide1 h4 {
+   font-size: 5em;
+   padding-bottom: 10px;
+}
+#services .slider .slide1 p {
+   font-size: 4em;
+   padding-bottom: 30px;
+}
+   #reviews .slide img {
+      height: 210px;
+   }
+#reviews .carousel {
+      padding-bottom: 50px;
+   }
+   #reviews .arrow_right .arrow, #reviews .arrow_left .arrow {
+      height: 130px;
+      width: 64px;
+   }
+   #reviews .owl3 {
+      margin-bottom: 0;
+   }
+#reviews .owl2, #reviews .owl3 {
+      width: 85%;
+      min-height: 0px;
+   }
+   #reviews .slide {
+      min-height: 0px;
+   }
+}
 // ≥1200px
 @media screen and (max-width: 1200px) {
 	//home
@@ -31,9 +60,6 @@
 	#services .slider .slide2 .title h4 {
 		font-size: 3.5em;
 	}
-	#reviews .slide img {
-		height: 280px;
-	}
 	#services .slider .slide2 .title .icon_item {
 		width: 120px;
 	}
@@ -42,9 +68,6 @@
 	}
 	#services .slider .slide1 h4 {
 		font-size: 6em;
-	}
-	#services .slider .slide1 p {
-		font-size: 5em;
 	}
 	#services .slider .slide2 {
    	min-height: 0px;
@@ -83,19 +106,8 @@
    #reviews .carousel {
    	padding-bottom: 50px;
    }
-   #reviews .arrow_right .arrow, #reviews .arrow_left .arrow {
-   	height: 130px;
-   	width: 64px;
-   }
-   #reviews .owl2, #reviews .owl3 {
-   	width: 85%;
-   	min-height: 0px;
-   }
    #reviews .slide {
    	min-height: 0px;
-   }
-   #reviews .slide img {
-   	height: 100px;
    }
    #services .slider .slide3 .block1 {
    	margin-top: 60px;
@@ -113,12 +125,12 @@
    #services .slider .slide3 .block3 {
    	margin-bottom: 60px;
    }
+   #reviews .slide .txt {
+      font-size: 1.8em;
+   }
    #services .slider .slide3 .block4 {
    	margin-top: 0;
    	margin-bottom: 100px;
-   }
-   #services .slider .slide1 {
-   	min-height: 750px;
    }
    #services .slider .slide3 .block2 .icon {
    	order: 2;
@@ -138,6 +150,15 @@
    }
    #services .slider .slide3 .block4 {
    	margin-bottom: 200px;
+   }
+      #reviews .slide img {
+      padding-right: 15px;
+   }
+   #reviews .owl3 .slide img {
+      padding-left: 15px;
+   }
+   #reviews .slide img {
+      height: 160px;
    }
 }
 
@@ -192,9 +213,6 @@
 #home .container {
 	min-height: 400px;
 }
-#reviews .slide .txt {
-	font-size: 2em;
-}
 #services .slider .slide2 .row {
 	justify-content: center;
 	padding-bottom: 140px;
@@ -228,17 +246,11 @@
 #services .slider .slide1 p {
 	font-size: 3.8em;
 }
-#services .slider .slide1 {
-	min-height: 750px;
-}
 #services .slider .slide2 .row {
 	padding-top: 50px;
 }
 #services .slider .slide2 .block p {
 	font-size: 2.3em;
-}
-#reviews h4, #advant h4 {
-	font-size: 4.5em;
 }
 
 }
