--- a/portfolio/Cargo/app/scss/main.scss
+++ b/portfolio/Cargo/app/scss/main.scss
@@ -381,7 +381,8 @@ header {
             width: 100%;
         }
         .slide1 {
-            min-height: 846px;
+           height: 100vh;
+           min-height: 640px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -769,6 +770,7 @@ header {
                 outline: none;
                 transition: .3s ease;
                 cursor: pointer;
+                color: #fff;
                 &:hover {
                     transform: scale(1.05);
                 }
